Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -175,6 +175,7 @@ header {
     display: block;
     float: left;
     padding: 0;
+    width: 25%;
 }
 
 /* COMPANY NAME */
@@ -280,7 +281,7 @@ footer h4 {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 691px;
+    width: 75%;
     margin: 4px 0;
 }
 
@@ -289,7 +290,6 @@ footer h4 {
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
